--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/03_html태그,상대서버절대경로,한페이지에서이동,html entity문자(a,img,&nbsp,&lt,&gt,&amp)/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/03_html태그,상대서버절대경로,한페이지에서이동,html entity문자(a,img,&nbsp,&lt,&gt,&amp)/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    #button {
+      float: right;
+    }
+  </style>
 </head>
 <body>
   <div id="wrap">
@@ -22,10 +27,12 @@
       <a href="#container">메인 컨텐츠로 이동</a>
       <a href="#footer">푸터로 이동</a>
     </header>
-    <main id="container" style="height:1500px; border:solid 10px red;">메인 컨텐츠</main>
+    <main id="container" style="height:1500px; border:solid 10px red;">메인&amp;컨ㆍ텐·츠</main>
     <fotter id="footer">
-      푸터<br>
-      <button><a href="#header">top</a></button>
+      <!-- &lt;text&gt; 입력하면 <text>로 보여진다. -->
+      푸&nbsp;&nbsp;&nbsp;&nbsp;터&lt;입니다.&gt;
+      <br>
+      <button id="button"><a href="#header">top</a></button>
     </fotter>
   </div>
 </body>
