--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/04_css적용하기(인라인,내부,외부스타일,border,width,height,outline)/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/04_css적용하기(인라인,내부,외부스타일,border,width,height,outline)/index.html
@@ -16,9 +16,10 @@
 <body>
   <div id="wrap">
     <!-- 인라인 스타일: 이메일 코딩처럼 파일연결이 불가능한 경우 사용 -->
-    <header id="header" style="height: 150px; border: 5px solid red;">
+    <header id="header" style="border: 5px solid red;">
       <h1 class="logo">
-        <img src="./images/logo_w.png" alt="써브웨이">
+        <a href="index.html">
+          <img src="./images/logo_w.png" alt="써브웨이"></a>
       </h1>
       <p class="txt">외부 스타일 적용하기</p>
     </header>
