--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/09_css초기화(네이버,에릭마이어reset 커스텀,스킵네비게이션,css변수)/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/09_css초기화(네이버,에릭마이어reset 커스텀,스킵네비게이션,css변수)/index.html
@@ -8,6 +8,9 @@
     <title>CSS 초기화</title>
 </head>
 <body>
+  <!-- skip navigation: tab키로 주요영역으로 바로가기 위한 메뉴(키보드 접근성) -->
+  <div id="skip_navi">
+    <a href="#container">본문 바로가기</a></div>
   <div id="wrap">
     <main id="container">
       <section class="main_etc">
@@ -25,6 +28,34 @@
           </fieldset>
         </form>
         <button type="button">버튼</button>
+        <div class="seaerch"></div>
+        <div>
+          <a href="#"><img src="images/logo_w.png" alt="써브웨이"></a>
+        </div>
+        <div>
+          <a href="#"><img src="images/logo_w.png" alt="써브웨이"></a>
+        </div>
+        <img src="images/image_1.jpg" alt="">
+        <ul>
+          <li>리스트</li>
+          <li>리스트</li>
+          <li>리스트</li>
+        </ul>
+        <a href="https://www.naver.com">네이버</a>
+        <div id="본문">
+          <p><iframe width="720" height="480" max-width="" src="https://www.youtube.com/embed/Fo7omZ03szI" title="Chillout Music for Work — Programming, Hacking, Coding — Future Garage for Concentration" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+      </div>
+      <div class="checkbox_wrap">
+        <input type="checkbox" name="체크박스" id="checkbox">
+        <label for="checkbox">오늘 하루 열지 않음</label>
+      </div>
+      <div class="checkbox_wrap">
+        <input type="checkbox" name="체크박스" id="checkbox1">
+        <label for="checkbox1">30일동안 열지 않음</label>
+      </div>
+      <textarea name="텍스트" id="textarea1" cols="30" rows="10"></textarea>
+      <input type="text" placeholder="서울특별시 종로구">
+      <input type="search" name="검색" id="search1">
       </section>
     </main>
   </div>
