--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/27_코리아리서치인터내셔널(반응형,2단가로메뉴,video,css캐싱방지)/index_practice_3.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/27_코리아리서치인터내셔널(반응형,2단가로메뉴,video,css캐싱방지)/index_practice_3.html
@@ -21,7 +21,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet"> -->
   <!-- 타임스탬프 코드로 캐싱 방지 -->
   <link rel="stylesheet" href="css/common.css?v=<?php echo time(); ?>">
-  <link rel="stylesheet" href="css/main.css?v=<?php echo time(); ?>">
+  <link rel="stylesheet" href="css/main_practice_3.css?v=<?php echo time(); ?>">
 </head>
 <body>
   <div id="skip_navi">
@@ -159,7 +159,7 @@
     <main id="container">
       <section class="main_slider">
         <h2 class="blind">메인비디오</h2>
-        <video src="video/main_visual001.mp4" autoplay muted loop playsinline"></video>
+        <video src="video/main_visual001.mp4" muted loop playsinline"></video>
         <div class="slider_bottom">
           <img src="images/main_slider_bottom.svg" alt="">
         </div>
