--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/27_코리아리서치인터내셔널(반응형,2단가로메뉴,video,css캐싱방지)/index_practice_2.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/27_코리아리서치인터내셔널(반응형,2단가로메뉴,video,css캐싱방지)/index_practice_2.html
@@ -21,7 +21,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet"> -->
   <!-- 타임스탬프 코드로 캐싱 방지 -->
   <link rel="stylesheet" href="css/common.css?v=<?php echo time(); ?>">
-  <link rel="stylesheet" href="css/main.css?v=<?php echo time(); ?>">
+  <link rel="stylesheet" href="css/main_practice_2.css?v=<?php echo time(); ?>">
 </head>
 <body>
   <div id="skip_navi">
@@ -83,86 +83,14 @@
           </ul>
         </nav>
         <div class="lang_wrap">
-          <ul class="lang">
-            <li class="active">
-              <a href="#">KOR</a>
-            </li>
-            <li>
-              <a href="#">ENG</a>
-            </li>
-          </ul>
-          <a href="#" class="btn inquiry_btn">조사문의</a>
-          <!-- 열기와 닫기가 따로일 경우 열기버튼을 누른 후 포커스를 이동해야 할 수 있으므로 a태그로 넣고, 하나일 경우(토글) button 태그 -->
-          <a href="#" class="open_btn">
-            <span class="blind">메뉴열기</span>
-            <i></i>
-            <i></i>
-            <i></i>
-            <i></i>
-          </a>
+          언어메뉴
         </div>
       </div>
-      <!-- mobile: m_, tablet: t_ desktop: pc_ -->
-      <aside class="m_gnb_wrap">
-        <button class="close_btn">
-          <span class="blind">닫기</span>
-          <i></i>
-          <i></i>
-        </button>
-        <ul class="m_gnb">
-            <li>
-              <a href="#">회사소개</a>
-              <ul class="depth2">
-                <li><a href="/sub/outline.html">회사 개요</a></li>
-                <li><a href="/sub/leadership/list.html">리더십</a></li>
-                <li><a href="/sub/growth.html">성장 가치</a></li>
-                <li><a href="/sub/subsidiary.html">계열사</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">서비스라인</a>
-              <ul class="depth2">
-                <li><a href="/sub/marketing.html">마케팅 리서치</a></li>
-                <li><a href="/sub/public.html">퍼블릭 리서치</a></li>
-                <li><a href="/sub/tech.html">리서치 Tech.</a></li>
-                <li><a href="/sub/diy.html">DIY/애자일 리서치</a></li>
-                <li><a href="/sub/ai.html"> AI 빅데이터</a></li>
-                <li><a href="/sub/client.html">클라이언트</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">콘텐츠라이브러리</a>
-              <ul class="depth2">
-                <li><a href="/sub/contents/list.html">리서치 콘텐츠</a></li>
-                <li><a href="/sub/news/list.html">뉴스/미디어룸</a></li>
-                <li><a href="/sub/kring/list.html">커뮤니티</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">문의하기</a>
-              <ul class="depth2">
-                <li><a href="/sub/inquiry/form.html">조사 문의</a></li>
-                <li><a href="/sub/direction.html">오시는 길</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">채용</a>
-              <ul class="depth2">
-                <li><a href="/sub/culture.html">회사 문화</a></li>
-                <li><a href="/sub/duty.html">직무 소개</a></li>
-                <li><a href="/sub/recruit/list.html">채용 안내</a></li>
-              </ul>
-            </li>
-          </ul>
-      </aside>
     </header>
     <main id="container">
       <section class="main_slider">
         <h2 class="blind">메인비디오</h2>
-        <video src="video/main_visual001.mp4" autoplay muted loop playsinline"></video>
-        <div class="slider_bottom">
-          <img src="images/main_slider_bottom.svg" alt="">
-        </div>
+        <video src="video/main_visual001.mp4" muted loop playsinline"></video>
       </section>
     </main>
   </div>
