--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/33_LG그룹(게시판,table,caption,thead,tbody,tfoot,tr,th,td)/annual.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/33_LG그룹(게시판,table,caption,thead,tbody,tfoot,tr,th,td)/annual.html
@@ -46,6 +46,124 @@
       <div class="contents">
         <div class="inner">
           <p class="tit">㈜LG</p>
+          <div class="board_list">
+            <table>
+              <caption>영업보고서 테이블: 번호, 보고서명, 첨부파일</caption>
+              <thead>
+                <th class="col1">번호</th>
+                <th class="col2">제목</th>
+                <th class="col3">첨부파일</th>
+              </thead>
+              <tr>
+                <td>9999</td>
+                <td class="td_left"><a class="link_btn" href="#">영업보고서(2022)</a></td>
+                <td>
+                  <a class="download_btn" href="#" title="파일 다운로드">
+                    <i class="mp4_file_icon"></i>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>9999</td>
+                <td class="td_left"><a class="link_btn" href="#">영업보고서를 포함한 금년도 조식, 중식, 석식 식단표와 함께하는 재무보고서 및 2023 사업계획서 및 조직구성표 및 재무재표 및 조직개선도와 함께하는 삼성전자와의 협업 제안서(2022)</a></td>
+                <td>
+                  <a class="download_btn" href="#" title="파일 다운로드">
+                    <i class="txt_file_icon"></i>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>9999</td>
+                <td class="td_left"><a class="link_btn" href="#">영업보고서(2022)</a></td>
+                <td>
+                  <a class="download_btn" href="#" title="파일 다운로드">
+                    <i class="ppt_file_icon"></i>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>9999</td>
+                <td class="td_left"><a class="link_btn" href="#">영업보고서(2022)</a></td>
+                <td>
+                  <a class="download_btn" href="#" title="파일 다운로드">
+                    <i class="doc_file_icon"></i>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>9999</td>
+                <td class="td_left"><a class="link_btn" href="#">영업보고서(2022)</a></td>
+                <td>
+                  <a class="download_btn" href="#" title="파일 다운로드">
+                    <i class="xls_file_icon"></i>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>9999</td>
+                <td class="td_left"><a class="link_btn" href="#">영업보고서(2022)</a></td>
+                <td>
+                  <a class="download_btn" href="#" title="파일 다운로드">
+                    <i class="pdf_file_icon"></i>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>9999</td>
+                <td class="td_left"><a class="link_btn" href="#">영업보고서(2022)</a></td>
+                <td>
+                  <a class="download_btn" href="#" title="파일 다운로드">
+                    <i class="pdf_file_icon"></i>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>9999</td>
+                <td class="td_left"><a class="link_btn" href="#">영업보고서(2022)</a></td>
+                <td>
+                  <a class="download_btn" href="#" title="파일 다운로드">
+                    <i class="pdf_file_icon"></i>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>9999</td>
+                <td class="td_left"><a class="link_btn" href="#">영업보고서(2022)</a></td>
+                <td>
+                  <a class="download_btn" href="#" title="파일 다운로드">
+                    <i class="pdf_file_icon"></i>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td>9999</td>
+                <td class="td_left"><a class="link_btn" href="#">영업보고서(2022)</a></td>
+                <td>
+                  <a class="download_btn" href="#" title="파일 다운로드">
+                    <i class="pdf_file_icon"></i>
+                  </a>
+                </td>
+              </tr>
+            </table>
+            <div class="board_pagination">
+              <a class="page_btn first" href="#">
+                <span class="blind">첫 페이지</span>
+              </a>
+              <a class="page_btn prev" href="#">
+                <span class="blind">이전</span>
+              </a>
+              <span class="num active">1</span>
+              <a href="#" class="num">2</a>
+              <!-- <a href="#" class="num">3</a>
+              <a href="#" class="num">4</a> -->
+              <a class="page_btn next" href="#">
+                <span class="blind">다음</span>
+              </a>
+              <a class="page_btn last" href="#">
+                <span class="blind">마지막 페이지</span>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </main>
