--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유튜바이오(반응형,2단세로메뉴,openwax,js구현)/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유튜바이오(반응형,2단세로메뉴,openwax,js구현)/index.html
@@ -81,6 +81,64 @@
             </li>
           </ul>
         </nav>
+        <div class="lang_wrap">
+          <button class="lang_btn" type="button">KOR</button>
+          <ul class="lang">
+            <li><a href="#">KOR</a></li>
+            <li><a href="#">ENG</a></li>
+          </ul>
+          <button type="button" class="open_btn">
+            <span class="blind">메뉴열기</span>
+            <i></i>
+            <i></i>
+            <i></i>
+          </button>
+        </div>
+        <aside class="m_gnb_wrap">
+          <ul class="m_gnb">
+            <li>
+              <a href="/about/greeting.do">기업 소개</a>
+              <ul class="depth2">
+                <li><a href="/about/greeting.do">인사말</a></li>
+                <li><a href="/about/management.do">주요 경영진</a></li>
+                <li><a href="/about/missionVision.do">미션과 비전</a></li>
+                <li><a href="/about/history.do">연혁</a></li>
+                <li><a href="/about/location.do">오시는 길</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="/products/sampleCheck.do">제품 및 서비스</a>
+              <ul class="depth2">
+                <li><a href="/products/sampleCheck.do">검체검사 서비스</a></li>
+                <li><a href="/products/digitalHealthcare.do">Digital Healthcare<br>Platform (IT)</a></li>
+                <li><a href="/products/biotechnology.do">Bio-Technology<br>Platform (BT)</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="/investment/financial.do">투자정보</a>
+              <ul class="depth2">
+                <li><a href="/investment/financial.do">재무 정보</a></li>
+                <li><a href="/investment/corporate.do">기업공시</a></li>
+                <li><a href="/investment/inquiry.do">투자 문의</a></li>
+                <li><a href="#">주주공고</a></li>
+              </ul>
+            </li>
+            <li><a href=#">미디어센터</a>
+              <ul class="depth2">
+                <li><a href=#">보도자료</a></li>
+                <li><a href="#">E카달로그</a></li>
+              </ul>
+            </li>
+            <li><a href="/recruitment/organization.do">채용정보</a>
+              <ul class="depth2">
+                <li><a href="/recruitment/organization.do">U2Bio 조직</a></li>
+                <li><a href="/recruitment/idealTalent.do">U2인재상</a></li>
+                <li><a href="/recruitment/humanReliance.do">U2 HR (Human Reliances)</a></li>
+                <li><a href="/recruitment/recruitmentInquiry.do">채용 문의</a></li>
+              </ul>
+            </li>
+          </ul>
+        </aside>
       </div>
     </header>
     <main id="container">
