--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유튜바이오(반응형,2단세로메뉴,openwax,js구현)/index_pr3.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유튜바이오(반응형,2단세로메뉴,openwax,js구현)/index_pr3.html
@@ -22,7 +22,7 @@
   <!-- 타임스탬프 코드로 캐싱 방지 -->
   <link rel="stylesheet" href="css/common.css?v=<?php echo time(); ?>">
   <link rel="stylesheet" href="css/main.css?v=<?php echo time(); ?>">
-  <script src="js/ui-common.js?v=<?php echo time(); ?>"></script>
+  <script src="js/ui-common_pr3.js?v=<?php echo time(); ?>"></script>
 </head>
 <body>
   <div id="skip_navi">
@@ -150,58 +150,6 @@
         <!-- 이미지 안에 text가 짤리면 안되기 때문에 img 태그로 삽입 -->
         <img class="pc_img" src="images/visual1.jpg" alt="메인 배경">
         <img class="m_img" src="images/m_visual1.jpg" alt="모바일 배경">
-        <a class="scroll_down" href="#">
-          scroll down
-          <div class="arrow_wrap">
-
-          </div>
-        </a>
-      </section>
-      <section class="main_business">
-        <div class="inner">
-          <div class="col">
-            <div class="tit_wrap">
-              <h2>Business</h2>
-              <p>우리는 맞춤형 헬스케어로 모두의 건강한 삶을 당연하게 만듭니다.<br>
-                We offer uniquely designed healthcare for each individual</p>
-            </div>
-            <div class="business_wrap">
-              <div class="business">
-                <a href="#">
-                  <img src="images/img_mc01_01.svg" alt="IT Service">
-                  <div class="txt_wrap">
-                    <h3>IT Service</h3>
-                    <em>Digital Healthcare Platform</em>
-                    <p>U2Bio의 디지털 헬스케어 서비스는 일선 병·의원에서 필요로 하는 다양한 니즈를 충족시키고자 합니다.</p>
-                  </div>
-                </a>
-              </div>
-              <a href="#" class="point1_btn btn">사업분야 더보기</a>
-            </div>
-          </div>
-          <div class="col">
-            <div class="business">
-              <a href="#">
-                <img src="images/img_mc01_02.svg" alt="검체검사 서비스">
-                <div class="txt_wrap">
-                  <h3>검체검사 서비스</h3>
-                  <em>In Vitro Service</em>
-                  <p>랩투진은 U2Bio의 진단검사 서비스 대표 브랜드로, 유투바이오의 강점인 IT기술을 활용하여 타사 대비 편리하고 유용한 기능을 제공하여 차별화를 시도하고 있습니다.</p>
-                </div>
-              </a>
-            </div>
-            <div class="business">
-              <a href="#">
-                <img src="images/img_mc01_03.svg" alt="BT Service">
-                <div class="txt_wrap">
-                  <h3>BT Service</h3>
-                  <em>Bio-Technology Platform</em>
-                  <p>U2Bio의 Bio-Technology 서비스 핵심 기술은 유전체 분석 기술입니다.</p>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
       </section>
     </main>
   </div>
