--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유튜바이오(반응형,2단세로메뉴,openwax,js구현)/index_practice_2.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유튜바이오(반응형,2단세로메뉴,openwax,js구현)/index_practice_2.html
@@ -22,7 +22,7 @@
   <!-- 타임스탬프 코드로 캐싱 방지 -->
   <link rel="stylesheet" href="css/common.css?v=<?php echo time(); ?>">
   <link rel="stylesheet" href="css/main_practice_2.css?v=<?php echo time(); ?>">
-  <script src="js/ui-common.js?v=<?php echo time(); ?>"></script>
+  <script src="js/ui-common_pr1.js?v=<?php echo time(); ?>"></script>
 </head>
 <body>
   <div id="skip_navi">
