--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유튜바이오(반응형,2단세로메뉴,openwax,js구현)/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유튜바이오(반응형,2단세로메뉴,openwax,js구현)/index.html
@@ -215,8 +215,8 @@
                 <div class="top">
                   <h3>유투바이오</h3>
                   <div class="num">
-                    <strong>4,290</strong>
-                    <span>50(1.18%)</span>
+                    <strong>0</strong>
+                    <span>50 (1.18%)</span>
                   </div>
                 </div>
                 <div class="bottom">
@@ -224,12 +224,42 @@
                   <a href="#" class="btn point2_btn">더보기</a>
                 </div>
               </div>
-              <div class="info_right">
+              <div class="info_right" data-aos="fade-up">
                 <a href="#">
                   <h3>기업 공시 확인하기</h3>
                 </a>
               </div>
             </div>
+          </div>
+          <div class="news_wrap">
+            <h2>News</h2>
+            <ul class="news">
+              <li>
+                <a href="#">
+                  <p class="txt">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</p>
+                  <span class="date">2024.12.12</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <p class="txt">유투바이오, KIMES 2024에서 'U2Check SMART' 공개할 예정</p>
+                  <span class="date">2024.12.12</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <p class="txt">㈜유투바이오, 美 아마존 입점 ··· 글로벌 사업 확장 가속화</p>
+                  <span class="date">2024.12.12</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <p class="txt">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</p>
+                  <span class="date">2024.12.12</span>
+                </a>
+              </li>
+            </ul>
+            <a href="#" class="more_btn"><span class="blind">뉴스 더보기</span></a>
           </div>
         </div>
       </section>
