--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유투바이오(반응형,2단세로메뉴,openwax,js구현)/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/01_html5, css3/34_유투바이오(반응형,2단세로메뉴,openwax,js구현)/index.html
@@ -67,9 +67,9 @@
                 <li><a href="#">주주공고</a></li>
               </ul>
             </li>
-            <li><a href=#">미디어센터</a>
+            <li><a href="#">미디어센터</a>
               <ul class="depth2">
-                <li><a href=#">보도자료</a></li>
+                <li><a href="#">보도자료</a></li>
                 <li><a href="#">E카달로그</a></li>
               </ul>
             </li>
@@ -126,9 +126,9 @@
                 <li><a href="#">주주공고</a></li>
               </ul>
             </li>
-            <li><a href=#">미디어센터</a>
+            <li><a href="#">미디어센터</a>
               <ul class="depth2">
-                <li><a href=#">보도자료</a></li>
+                <li><a href="#">보도자료</a></li>
                 <li><a href="#">E카달로그</a></li>
               </ul>
             </li>
@@ -182,7 +182,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="business "data-aos="fade-up">
+            <div class="business" data-aos="fade-up">
               <a href="#">
                 <img src="images/img_mc01_02.svg" alt="검체검사 서비스">
                 <div class="txt_wrap">
@@ -283,7 +283,7 @@
         </div>
       </section>
       <section class="main_partner">
-        <div class="inner">
+        <div class="inner" data-aos="fade-up">
           <h2>Partner</h2>
           <ul class="partner">
             <li><img src="images/partner1.jpg" alt="파트너"></li>
@@ -298,6 +298,36 @@
         </div>
       </section>
     </main>
+    <footer id="footer">
+      <div class="inner">
+        <div class="footer_top">
+          <ul class="footer_menu">
+            <li><a href="#">이메일 무단 수집 거부</a></li>
+            <li><a href="#">오시는 길</a></li>
+          </ul>
+        </div>
+        <div class="footer_bottom">
+          <h2 class="footer_logo"><span class="blind">유투바이오</span></h2>
+          <div class="txt_wrap">
+            <p class="address">대표자 : 김진태<span class="line"></span>대표전화 1577-1338<span class="line"></span>개인정보책임자 : 김지원</p>
+            <p class="address">IR문의 : 070-4492-2727<span class="line"></span>주소 : 서울특별시 송파구 오금로 489<span class="line"></span>사업자번호 : 113-86-26732</p>
+            <p class="copyright">COPYRIGHTS © U2Bio CO., LTD. ALL RIGHTS RESERVED</p>
+          </div>
+          <div class="link_wrap">
+            <a href="#" class="inquiry_btn">채용문의</a>
+            <div class="family_wrap">
+              <button type="button" class="family_btn">Family Site</button>
+              <ul class="family">
+                <li><a href="#" target="_blank" title="새창 열림">유투바이오</a></li>
+                <li><a href="#" target="_blank" title="새창 열림">유투바이오IT</a></li>
+                <li><a href="#" target="_blank" title="새창 열림">U2Labs</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <a href="#" class="top_btn"><span class="blind">위로 이동</span></a>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
