--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/06_서브웨이(헤더전체메뉴)/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/06_서브웨이(헤더전체메뉴)/index.html
@@ -47,38 +47,77 @@
         </ul>
       </div>
       <div class="header_bottom">
-        <ul class="gnb">
-          <li>
-            <a href="#none">
-              메뉴소개
-            </a>
-          </li>
-          <li>
-            <a href="#none">
-              이용방법
-            </a>
-          </li>
-          <li>
-            <a href="#none">
-              새소식
-            </a>
-          </li>
-          <li>
-            <a href="#none">
-              써브웨이
-            </a>
-          </li>
-          <li>
-            <a href="#none">
-              가맹점
-            </a>
-          </li>
-          <li>
-            <a href="#none">
-              온라인주문
-            </a>
-          </li>
-        </ul>
+        <nav class="gnb_wrap">
+          <ul class="gnb">
+            <li>
+              <a href="#">메뉴소개</a>
+              <ul class="depth2">
+                <li>
+                  <a href="/menuList/sandwich">샌드위치</a>
+                </li>
+                <li>
+                  <a href="/menuList/unit">랩ㆍ기타</a>
+                </li>
+                <li>
+                  <a href="/menuList/salad">샐러드</a>
+                </li>
+                <li>
+                  <a href="/menuList/morning">아침메뉴</a>
+                </li>
+                <li>
+                  <a href="/menuList/sidedrink">스마일 썹</a>
+                </li>
+                <li>
+                  <a href="/menuList/catering">단체메뉴</a>
+                </li>
+              </ul>
+            <li>
+              <a href="#">이용방법</a>
+              <ul class="depth2">
+                <li><a href="/utilizationSubway">써브웨이 이용방법</a></li>
+                <li><a href="/utilizationGroupMenu">단체메뉴 이용방법</a></li>
+                <li><a href="/freshInfo">신선한 재료 소개</a></li>
+                <li><a href="/appFastMenu">App 이용방법</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">새소식</a>
+              <ul class="depth2">
+                <li><a href="/eventList">이벤트ㆍ프로모션</a></li>
+                <li><a href="/newsList">뉴스ㆍ공지사항</a></li>
+                <li><a href="/tvCommercial">광고영상</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">써브웨이</a>
+              <ul class="depth2">
+                <li><a href="/subwayHistory">써브웨이 역사</a></li>
+                <li><a href="/subwayPromise">써브웨이 약속</a></li>
+                <li><a href="#">써브웨이 사회공헌</a></li>
+                <li><a href="/subwaySandwichArtist">샌드위치 아티스트 지원</a></li>
+                <li><a href="/storeSearch">매장찾기</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">가맹점</a>
+              <ul class="depth2">
+                <li><a href="/franchise">써브웨이 프랜차이즈</a></li>
+                <li><a href="/franchiseFaq">가맹관련 FAQ</a></li>
+                <li><a href="/franchiseInquiry">가맹신청ㆍ문의</a></li>
+                <li><a href="/franchiseBranchGuide">지사안내</a></li>
+                <li><a href="/franchiseInformation">사업설명회</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">온라인 주문</a>
+              <ul class="depth2">
+                <li><a href="/order/view/fast/near/store">FAST-SUB</a></li>
+                <li><a href="/order/view/home/step1">HOME-SUB</a></li>
+                <li><a href="/order/view/group">단체주문</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main id="container">
