--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/common.css?v=<?php echo time(); ?>">
   <link rel="stylesheet" href="css/main.css?v=<?php echo time(); ?>">
+  <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/ui-common.js?v=<?php echo time(); ?>"></script>
@@ -112,9 +113,8 @@
             </div>
           </div>
           <div class="swiper-pagination"></div>
-          <div class="swiper-button-prev"></div>
+          <!-- <div class="swiper-button-prev"></div> -->
           <div class="swiper-button-next"></div>
-          <div class="swiper-scrollbar"></div>
         </div>
       </section>
     </main>
