--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/10_롯데스윗몰(슬라이더옆에텍스트있는타입,centermode,100퍼슬라이더)/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/10_롯데스윗몰(슬라이더옆에텍스트있는타입,centermode,100퍼슬라이더)/index.html
@@ -48,23 +48,154 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <a href="#">
-                  <div class="slide_wrap">
-                    <div class="bg"></div>
-                    <div class="img_wrap">
-                      <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
-                    </div>
-                    <div class="txt_wrap">
-                      <div class="com">
-                       <p>오잉 노가리땅콩 청양마요맛 80g</p>
-                       <span>1,400원</span>
-                      </div>
-                    </div>
+                  <div class="bg"></div>
+                  <div class="img_wrap">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                  <div class="txt_wrap">
+                    <p>오잉 노가리땅콩 청양마요맛 80g</p>
+                    <span>1,400원</span>
+                  </div>
+                  <div class="cover">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
                   </div>
                 </a>
               </div>
-              <div class="swiper-slide">123</div>
-              <div class="swiper-slide">4566</div>
-
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="bg"></div>
+                  <div class="img_wrap">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                  <div class="txt_wrap">
+                    <p>오잉 노가리땅콩 청양마요맛 80g</p>
+                    <span>1,400원</span>
+                  </div>
+                  <div class="cover">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="bg"></div>
+                  <div class="img_wrap">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                  <div class="txt_wrap">
+                    <p>오잉 노가리땅콩 청양마요맛 80g</p>
+                    <span>1,400원</span>
+                  </div>
+                  <div class="cover">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="bg"></div>
+                  <div class="img_wrap">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                  <div class="txt_wrap">
+                    <p>오잉 노가리땅콩 청양마요맛 80g</p>
+                    <span>1,400원</span>
+                  </div>
+                  <div class="cover">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="bg"></div>
+                  <div class="img_wrap">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                  <div class="txt_wrap">
+                    <p>오잉 노가리땅콩 청양마요맛 80g</p>
+                    <span>1,400원</span>
+                  </div>
+                  <div class="cover">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="bg"></div>
+                  <div class="img_wrap">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                  <div class="txt_wrap">
+                    <p>오잉 노가리땅콩 청양마요맛 80g</p>
+                    <span>1,400원</span>
+                  </div>
+                  <div class="cover">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="bg"></div>
+                  <div class="img_wrap">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                  <div class="txt_wrap">
+                    <p>오잉 노가리땅콩 청양마요맛 80g</p>
+                    <span>1,400원</span>
+                  </div>
+                  <div class="cover">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="bg"></div>
+                  <div class="img_wrap">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                  <div class="txt_wrap">
+                    <p>오잉 노가리땅콩 청양마요맛 80g</p>
+                    <span>1,400원</span>
+                  </div>
+                  <div class="cover">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="bg"></div>
+                  <div class="img_wrap">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                  <div class="txt_wrap">
+                    <p>오잉 노가리땅콩 청양마요맛 80g</p>
+                    <span>1,400원</span>
+                  </div>
+                  <div class="cover">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <div class="bg"></div>
+                  <div class="img_wrap">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                  <div class="txt_wrap">
+                    <p>오잉 노가리땅콩 청양마요맛 80g</p>
+                    <span>1,400원</span>
+                  </div>
+                  <div class="cover">
+                    <img src="images/5871f3d5f5581e96a8e2fb64d8e7725f.png" alt="노가리땅콩">
+                  </div>
+                </a>
+              </div>
             </div>
             <div class="swiper-scrollbar"></div>
           </div>
