--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/10_롯데스윗몰(슬라이더옆에텍스트있는타입,centermode,100퍼슬라이더)/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/10_롯데스윗몰(슬라이더옆에텍스트있는타입,centermode,100퍼슬라이더)/index.html
@@ -201,6 +201,90 @@
           </div>
         </div>
       </section>
+      <section class="main_popular">
+        <div class="main_tit">
+          <h2>선물하기 인기상품</h2>
+          <p>이번주 가장 많이 선물한 인기 상품은?</p>
+          <a href="#" class="more_btn">선물하기 더보기</a>
+        </div>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <a href="#">
+                <img src="images/produbct1.png" alt="제로 아이스 세트">
+              </a>
+              <div class="txt_wrap">
+                <strong>제로 아이스 세트</strong>
+                <p>무더운 여름 칼로리 걱정 없는 아이스크림!</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <a href="#">
+                <img src="images/produbct2.png" alt="겨울 대표 간식">
+              </a>
+              <div class="txt_wrap">
+                <strong>겨울 대표 간식</strong>
+                <p>무더운 여름 칼로리 걱정 없는 아이스크림!</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <a href="#">
+                <img src="images/produbct1.png" alt="프리미엄 선물">
+              </a>
+              <div class="txt_wrap">
+                <strong>프리미엄 선물</strong>
+                <p>가나 생 쇼콜라</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <a href="#">
+                <img src="images/produbct1.png" alt="프리미엄 선물">
+              </a>
+              <div class="txt_wrap">
+                <strong>간식자판기 마니아</strong>
+                <p>스위트몰 스테디셀러 간식자판기<br>아직도 안먹어본 사람!</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <a href="#">
+                <img src="images/produbct1.png" alt="제로 아이스 세트">
+              </a>
+              <div class="txt_wrap">
+                <strong>제로 아이스 세트</strong>
+                <p>무더운 여름 칼로리 걱정 없는 아이스크림!</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <a href="#">
+                <img src="images/produbct2.png" alt="겨울 대표 간식">
+              </a>
+              <div class="txt_wrap">
+                <strong>겨울 대표 간식</strong>
+                <p>무더운 여름 칼로리 걱정 없는 아이스크림!</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <a href="#">
+                <img src="images/produbct1.png" alt="프리미엄 선물">
+              </a>
+              <div class="txt_wrap">
+                <strong>프리미엄 선물</strong>
+                <p>가나 생 쇼콜라</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <a href="#">
+                <img src="images/produbct1.png" alt="프리미엄 선물">
+              </a>
+              <div class="txt_wrap">
+                <strong>간식자판기 마니아</strong>
+                <p>스위트몰 스테디셀러 간식자판기<br>아직도 안먹어본 사람!</p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-scrollbar"></div>
+        </div>
+      </section>
     </main>
   </div>
 </body>
