--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/index.html
@@ -96,7 +96,8 @@
           </button>
         </div>
         <aside class="m_gnb_wrap">
-          <ul class="m_gnb">
+          <div class="scroll">
+            <ul class="m_gnb">
             <li>
               <a href="#">넥슨게임즈</a>
               <ul class="depth2">
@@ -141,12 +142,13 @@
                 <li><a href="#">멀티미디어</a></li>
               </ul>
             </li>
-          </ul>
-          <div class="m_lang_wrap">
-            <ul class="m_lang">
-              <li><a href="#" class="active">KOR</a></li>
-              <li><a href="#" class="eng">ENG</a></li>
             </ul>
+            <div class="m_lang_wrap">
+              <ul class="m_lang">
+                <li><a href="#" class="active">KOR</a></li>
+                <li><a href="#" class="eng">ENG</a></li>
+              </ul>
+            </div>
           </div>
           <button type="button" class="close_btn">
             <span class="blind">메뉴 닫기</span>
@@ -164,15 +166,41 @@
               <video src="video/Hit2.mp4" muted loop autoplay playsinline></video>
             </div>
             <div class="swiper-slide">
-              <video src="video/BlueArchive.mp4" muted loop autoplay playsinline></video>
+              <video src="video/BlueArchive.mp4" muted loop  playsinline></video>
             </div>
             <div class="swiper-slide">
-              <video src="video/FirstDescendant.mp4" muted loop autoplay playsinline></video>
+              <video src="video/FirstDescendant.mp4" muted loop  playsinline></video>
             </div>
           </div>
           <div class="pagination_wrap">
+            <!-- 간단한 태그(.page_num) 작성 가능하여 2개의 pagination 작성하는 대신 1개 작성 -->
+            <!-- <div class="swiper-pagination pagination_number"></div> -->
+            <div class="page_num">
+              <span class="current">01</span>
+              /
+              <span class="total">03</span>
+            </div>
             <div class="swiper-pagination"></div>
             <div class="swiper-button-next"></div>
+            <div class="swiper-scrollbar"></div>
+          </div>
+        </div>
+      </section>
+      <section class="main_intro">
+        <div class="tit_wrap">
+          <h2>
+            <span>We Make Games Better</span>
+            <strong>NEXON Games</strong>
+          </h2>
+        </div>
+        <div class="inner">
+          <div class="col_left">
+            <p>우리는 더 좋은 게임(Better Game)을<br>만들고 세상에 보여주기 위해 모였습니다.</p>
+            <p>유저가 더 즐겁게 게임을 즐길 수 있도록,<br>세상보다 먼저 한 발자국 더 나아갑니다.</p>
+            <p>넥슨게임즈의 방식으로<br>더 좋은 게임을 만듭니다.</p>
+          </div>
+          <div class="col_right">
+            <img src="images/main_mid_img_01_new.png" alt="메인 이미지">
           </div>
         </div>
       </section>
