--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/index.html
@@ -204,6 +204,91 @@
           </div>
         </div>
       </section>
+      <section class="main_worker">
+        <div class="inner">
+          <h2>Who we are</h2>
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="col_left">
+                  <img src="images/yoon.png" alt="윤진홍 님">
+                </div>
+                <div class="col_right">
+                  <div class="tit_wrap">
+                    <span>interviewee.</span>
+                    <h3>
+                      <strong>윤진홍 님</strong>
+                      <span>서든어택실 비전파트</span>
+                    </h3>
+                  </div>
+                  <div class="txt_wrap">
+                    <strong>“제안하고 논의하며 성장합니다.”</strong>
+                    <p class>
+                      우리는 같은 장르, 전형적인 룰로 게임을 만들지 않아요.<br>
+                      타 장르의 재미요소와 게임 외 재미들을 융합해 새로운 재미를 만듭니다.<br>
+                      제 아이디어가 개발로 이어지기도, 이어지지 않기도 하지만,<br>
+                      뛰어난 동료들과 함께 논의하는 과정에서 매일 한 걸음 씩 더 성장함을 느껴요.
+                      </p>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="col_left">
+                  <img src="images/jo.png" alt="조정위 님">
+                </div>
+                <div class="col_right">
+                  <div class="tit_wrap">
+                    <span>interviewee.</span>
+                    <h3>
+                      <strong>조정위 님</strong>
+                      <span>매그넘스튜디오 아트실</span>
+                    </h3>
+                  </div>
+                  <div class="txt_wrap">
+                    <strong>“믿고 갈 수 있습니다.”</strong>
+                    <p>
+                      넥슨게임즈는 신규 프로젝트들을 신중히 시작하고,<br>
+                      한번 시작하면 필요한 지원을 아끼지 않아요.<br>
+                      이후 과정에 시행착오가 있더라도 중단하지 않고 최선을 다할 것이라는 믿음이 있습니다.<br>
+                      개발자 한 명 한 명의 커리어를 소중히 여기는 회사에 대한 믿음으로<br>
+                      개발에만 더욱 몰입할 수 있습니다.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="col_left">
+                  <img src="images/kim.png" alt="김다란 님">
+                </div>
+                <div class="col_right">
+                  <div class="tit_wrap">
+                    <span>interviewee.</span>
+                    <h3>
+                      <strong>김다란 님</strong>
+                      <span>DX스튜디오 개발관리실</span>
+                    </h3>
+                  </div>
+                  <div class="txt_wrap">
+                    <strong>“함께 만들어 나가고 있습니다.”</strong>
+                    <p>
+                      넥슨게임즈는 실무자의 의견과 제안을 적극적으로 수렴합니다.<br>
+                      전사의 업무용 메신저를 선택할 때도 실무 리더인 PM들이 모여<br>
+                      논의하고 결정했던 경험이 기억에 남아요.<br>
+                      회사가 구성원들을 깊이 존중함을 느꼈던 경험입니다.<br>
+                      우리는 함께 회사를 만든다는 자부심으로 일합니다.
+                      </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="btn_wrap">
+              <div class="swiper-button-prev arrow_btn">prev</div>
+              <span class="bar"></span>
+              <div class="swiper-button-next arrow_btn">next</div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </div>
 </body>
