--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/index.html
@@ -289,7 +289,174 @@
           </div>
         </div>
       </section>
+      <section class="main_news">
+        <div class="inner">
+          <h2>News</h2>
+          <ul class="news">
+            <li>
+              <a href="https://theviewers.co.kr/View.aspx?No=3199613" target="_blank" title="새창 열림">
+                <div class="img_wrap">
+                  <img src="images/news_01.jpg" alt="#">
+                </div>
+              </a>
+              <div class="txt_wrap">
+                <div class="category">
+                  <a href="#">넥슨게임즈</a>
+                  <span>2024.04.18</span>
+                </div>
+                <a class="tit" href="https://theviewers.co.kr/View.aspx?No=3199613" target="_blank" title="새창 열림">
+                  넥슨게임즈, ‘블루 아카이브-히트2’ 日 쌍끌이 흥행
+                </a>
+                <p class="txt">
+                  ‘블루 아카이브’와 MMORPG ‘히트2’가 일본에서 나란히 매출 TOP10에 진입했다. 기존 게임과 신작 모두 흥행을 이어가는 모양새다.
+                </p>
+              </div>
+            </li>
+            <li>
+              <a href="https://theviewers.co.kr/View.aspx?No=3199613" target="_blank" title="새창 열림">
+                <div class="img_wrap">
+                  <img src="images/news_02.jpg" alt="#">
+                </div>
+              </a>
+              <div class="txt_wrap">
+                <div class="category">
+                  <a href="#">퍼스트 디센던트</a>
+                  <span>2024.04.18</span>
+                </div>
+                <a class="tit" href="https://theviewers.co.kr/View.aspx?No=3199613" target="_blank" title="새창 열림">
+                  넥슨게임즈에게 '퍼스트 디센던트'란? "글로벌 속 해답지"
+                </a>
+                <p class="txt">
+                  넥슨의 올해 첫 글로벌 선봉장 역할을맡은 타이틀은 넥슨게임즈가 개발한 ‘퍼스트 디센던트’다. 3인칭 루트슈터 장르로 지난해 두 번의 테스트를 거쳐 올해 여름 출시를 확정 지은 상태다.
+                </p>
+              </div>
+            </li>
+            <li>
+              <a href="https://theviewers.co.kr/View.aspx?No=3199613" target="_blank" title="새창 열림">
+                <div class="img_wrap">
+                  <img src="images/news_03.png" alt="#">
+                </div>
+              </a>
+              <div class="txt_wrap">
+                <div class="category">
+                  <a href="#">넥슨게임즈</a>
+                  <span>2024.04.15</span>
+                </div>
+                <a class="tit" href="https://theviewers.co.kr/View.aspx?No=3199613" target="_blank" title="새창 열림">
+                  '미다스의 손' 박용현 넥슨게임즈 CEO, 그룹 존재감 UP...개발부사장 '겸직'
+                </a>
+                <p class="txt">
+                  게임업계 '미다스의 손'으로 불리는 박용현 넥슨게임즈 대표가 넥슨 그룹 전체의 개발 컨트롤타워를 맡게 돼 이목이 쏠린다.
+                </p>
+              </div>
+            </li>
+          </ul>
+          <a href="#" class="more_btn">more</a>
+        </div>
+      </section>
+      <section class="main_careers">
+        <div class="inner">
+          <h2>Careers</h2>
+          <img src="images/careers_visual.jpg" alt="커리어">
+          <div class="txt_box">
+            <p>
+              새로운 재미, 교류와 공감의 세계를 창조할<br>
+              게이머들과 함께하고 싶습니다.
+            </p>
+          </div>
+          <a href="#" class="more_btn">지원하기</a>
+        </div>
+      </section>
     </main>
+    <footer id="footer">
+      <div class="inner">
+        <div class="footer_top">
+          <div class="col_left">
+            <h2 class="logo">
+              <a href="index.html">
+                <img src="images/footer_logo.png" alt="넥슨">
+              </a>
+            </h2>
+            <div class="footer_info_wrap">
+              <p class="address">
+                넥슨게임즈 SEOUL<br>
+                서울특별시 강남구 남부순환로 2621 디앤오 강남빌딩 5층
+              </p>
+              <p class="address">
+                넥슨게임즈 PANGYO<br>
+                경기 성남시 분당구 판교로 256번길 25 판교 테크노벨리
+              </p>
+              <a class="award" href="https://www.gdweb.co.kr/sub/view.asp?displayrow=60&Txt_key=all&Txt_word=&Txt_agnumber=&Txt_fgbn=5&Txt_bcode1=020810001&Txt_gbflag=&Txt_bcode2=&Txt_bcode3=&Txt_bcode4=&Txt_bcode5=&Page=1&str_no=17268" target="_blank" title="새창 열림">
+                <img src="images/winner_logo.jpg" alt="어워드">
+              </a>
+            </div>
+          </div>
+          <div class="col_right">
+            <ul class="footer_menu">
+              <li>
+                <a href="#">넥슨게임즈</a>
+                <ul class="menu_list">
+                  <li><a href="#">넥슨게임즈</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">게임</a>
+                 <ul class="menu_list">
+                  <li><a href="#">V4</a></li>
+                  <li><a href="#">서든어택</a></li>
+                  <li><a href="#">블루 아카이브</a></li>
+                  <li><a href="#">히트2</a></li>
+                  <li><a href="#">퍼스트 디센던트</a></li>
+                  <li><a href="#">갓썸</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">인재채용</a>
+                <ul class="menu_list">
+                  <li><a href="#">기업문화</a></li>
+                  <li><a href="#">피플&amp;컬처</a></li>
+                  <li><a href="#">복지</a></li>
+                  <li><a href="#">채용</a></li>
+                </ul>
+              </li>
+               <li>
+                <a href="#">투자정보</a>
+                <ul class="menu_list">
+                  <li><a href="#">기업지배구조</a></li>
+                  <li><a href="#">주가정보</a></li>
+                  <li><a href="#">재무정보</a></li>
+                  <li><a href="#">공시/실적</a></li>
+                  <li><a href="#">공고</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">미디어</a>
+                <ul class="menu_list">
+                  <li><a href="#">뉴스</a></li>
+                  <li><a href="#">보도자료</a></li>
+                  <li><a href="#">멀티미디어</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer_bottom">
+          <p class="copyright">©NEXON Games All Rights Reserved.</p>
+          <button type="button" class="family_btn">
+            관련사이트
+          </button>
+          <div class="family_wrap">
+            <ul class="family">
+              <li><a href="#">넥슨코리아</a></li>
+              <li><a href="#">넥슨</a></li>
+              <li><a href="#">네오플</a></li>
+              <li><a href="#">넥슨커뮤니케이션즈</a></li>
+              <li><a href="#">엔미디어플랫폼</a></li>
+              <li><a href="#">넥슨스페이스</a></li>
+            </ul>
+          </div>
+        </div>
+    </footer>
   </div>
 </body>
 </html>
