--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/13_유투바이오(jQuery 마이그레이션, 로그인 페이지, 보도자료)/release-list.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/13_유투바이오(jQuery 마이그레이션, 로그인 페이지, 보도자료)/release-list.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="/pub/images/og_image.jpg">
   <meta property="og:url" content="https://u2bio.com/front/main.do">
-  <title> U2Bio</title>
+  <title> 보도자료 | U2Bio</title>
   <!-- 파비콘 -->
   <link rel="icon" href="images/favicon/favicon.ico">
   <link rel="apple-touch-icon-precomposed" href="images/favicon/favicon.ico">
@@ -35,7 +35,7 @@
     <a href="#container">본문 바로가기</a>
   </div>
   <div id="wrap">
-    <header id="header">
+    <header id="header" class="sub_header">
       <div class="inner">
         <h1 class="logo">
           <a href="index.html">
@@ -71,9 +71,9 @@
                 <li><a href="#">주주공고</a></li>
               </ul>
             </li>
-            <li><a href="release-list.html">미디어센터</a>
+            <li><a href="#">미디어센터</a>
               <ul class="depth2">
-                <li><a href="release-list.html">보도자료</a></li>
+                <li><a href="#">보도자료</a></li>
                 <li><a href="#">E카달로그</a></li>
               </ul>
             </li>
@@ -133,7 +133,7 @@
             </li>
             <li><a href="#">미디어센터</a>
               <ul class="depth2">
-                <li><a href="release-list.html">보도자료</a></li>
+                <li><a href="#">보도자료</a></li>
                 <li><a href="#">E카달로그</a></li>
               </ul>
             </li>
@@ -150,158 +150,54 @@
         </aside>
       </div>
     </header>
-    <main id="container">
-      <section class="main_slider">
-        <!-- section 태그에는 blind 제목이 있어야함 -->
-        <h2 class="blind">메인 슬라이더</h2>
-        <!-- 이미지 안에 text가 짤리면 안되기 때문에 img 태그로 삽입 -->
-        <img class="pc_img" src="images/visual1.jpg" alt="메인 배경">
-        <img class="m_img" src="images/m_visual1.jpg" alt="모바일 배경">
-        <a class="scroll_down" href="#">
-          scroll down
-          <div class="arrow_wrap">
-
-          </div>
-        </a>
-      </section>
-      <section class="main_business">
+    <main id="container" class="release sub_container">
+      <div class="sub_top">
         <div class="inner">
-          <div class="col">
-            <div class="tit_wrap" data-aos="fade-up">
-              <h2>Business</h2>
-              <p>우리는 맞춤형 헬스케어로 모두의 건강한 삶을 당연하게 만듭니다.<br>
-                We offer uniquely designed healthcare for each individual</p>
-            </div>
-            <div class="business_wrap" data-aos="fade-up">
-              <div class="business">
-                <a href="#">
-                  <img src="images/img_mc01_01.svg" alt="IT Service">
-                  <div class="txt_wrap">
-                    <h3>IT Service</h3>
-                    <em>Digital Healthcare Platform</em>
-                    <p>U2Bio의 디지털 헬스케어 서비스는 일선 병·의원에서 필요로 하는 다양한 니즈를 충족시키고자 합니다.</p>
-                  </div>
-                </a>
-              </div>
-              <a href="#" class="point_btn1 btn pc_more_btn">사업분야 더보기</a>
-            </div>
-          </div>
-          <div class="col">
-            <div class="business" data-aos="fade-up">
-              <a href="#">
-                <img src="images/img_mc01_02.svg" alt="검체검사 서비스">
-                <div class="txt_wrap">
-                  <h3>검체검사 서비스</h3>
-                  <em>In Vitro Service</em>
-                  <p>랩투진은 U2Bio의 진단검사 서비스 대표 브랜드로, 유투바이오의 강점인 IT기술을 활용하여 타사 대비 편리하고 유용한 기능을 제공하여 차별화를 시도하고 있습니다.</p>
-                </div>
-              </a>
-            </div>
-            <div class="business" data-aos="fade-up">
-              <a href="#">
-                <img src="images/img_mc01_03.svg" alt="BT Service">
-                <div class="txt_wrap">
-                  <h3>BT Service</h3>
-                  <em>Bio-Technology Platform</em>
-                  <p>U2Bio의 Bio-Technology 서비스 핵심 기술은 유전체 분석 기술입니다.</p>
-                </div>
-              </a>
-            </div>
-            <a href="#" class="point_btn1 btn m_more_btn" data-aos="fade-up">사업분야 더보기</a>
-          </div>
+          <h2>보도자료</h2>
+          <p class="txt">U2Bio를 알려드릴 소식과 외부에서 보는 U2Bio의 모습들입니다.</p>
+          <p class="location">홈<span></span>미디어센터<span></span><strong>보도자료</strong></p>
         </div>
-      </section>
-      <section class="main_info">
+      </div>
+      <div class="sub_visual">
         <div class="inner">
-          <div class="info">
-            <h2>주식정보</h2>
-            <div class="row">
-              <div class="info_left">
-                <div class="top">
-                  <h3>유투바이오</h3>
-                  <div class="num">
-                    <strong>0</strong>
-                    <span>50 (1.18%)</span>
-                  </div>
-                </div>
-                <div class="bottom">
-                  <p>KRX 2024.04.07 기준</p>
-                  <a href="#" class="btn point_btn1">더보기</a>
-                </div>
-              </div>
-              <div class="info_right" data-aos="fade-up">
-                <a href="#">
-                  <h3>기업 공시 확인하기</h3>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="news_wrap">
-            <h2>News</h2>
-            <ul class="news">
-              <li>
-                <a href="#">
-                  <p class="txt">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</p>
-                  <span class="date">2024.12.12</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <p class="txt">유투바이오, KIMES 2024에서 'U2Check SMART' 공개할 예정</p>
-                  <span class="date">2024.12.12</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <p class="txt">㈜유투바이오, 美 아마존 입점 ··· 글로벌 사업 확장 가속화</p>
-                  <span class="date">2024.12.12</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <p class="txt">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</p>
-                  <span class="date">2024.12.12</span>
-                </a>
-              </li>
-            </ul>
-            <a href="#" class="more_btn"><span class="blind">뉴스 더보기</span></a>
-          </div>
-        </div>
-      </section>
-      <section class="main_recruit">
-        <div class="inner">
-          <div class="recruit_left">
-            <em data-aos="fade-up">Recruitment</em>
-            <h2 data-aos="fade-up">인재채용</h2>
-            <p data-aos="fade-up">U2Bio는 더 나은 세상을 만들어갈 도전적이고 열정적인 인재<br>
-            를 기다립니다. Vision과 진정한 기업가의 정신을 함께할 주인공은<br>
-            바로 당신입니다.</p>
-            <button type="button" class="point_btn1 btn" data-aos="fade-up">더보기</button>
-          </div>
-          <div class="recruit_right" data-aos="fade-up">
-            <img class="img1" src="images/img_mc03_01.png" alt="">
-            <img class="img2" src="images/img_mc03_02.png" alt="">
-            <img class="img4" src="images/img_mc03_04.png" alt="">
-            <img class="img5" src="images/img_mc03_05.png" alt="">
-            <img class="img3" src="images/img_mc03_03.png" alt="">
-          </div>
-        </div>
-      </section>
-      <section class="main_partner">
-        <div class="inner" data-aos="fade-up">
-          <h2>Partner</h2>
-          <ul class="partner">
-            <li><img src="images/partner1.jpg" alt="파트너"></li>
-            <li><img src="images/partner1.jpg" alt="파트너"></li>
-            <li><img src="images/partner1.jpg" alt="파트너"></li>
-            <li><img src="images/partner1.jpg" alt="파트너"></li>
-            <li><img src="images/partner1.jpg" alt="파트너"></li>
-            <li class="row2"><img src="images/partner1.jpg" alt="파트너"></li>
-            <li class="row2"><img src="images/partner1.jpg" alt="파트너"></li>
-            <li class="row2"><img src="images/partner1.jpg" alt="파트너"></li>
+          <ul class="sub_tab">
+            <li class="active"><a href="#">보도자료</a></li>
+            <li><a href="#">E카달로그</a></li>
           </ul>
+          <!-- 모바일용 토글 버튼 -->
+          <div class="sub_tab2">
+            <button class="tab_btn">보도자료</button>
+            <ul class="tab_list">
+              <li class="active"><a href="#">보도자료</a></li>
+              <li><a href="#">E카달로그</a></li>
+            </ul>
+          </div>
         </div>
-      </section>
+      </div>
+      <div class="contents">
+        <div class="inner">
+          <form>
+            <field>
+              <legend>게시물 검색</legend>
+              <div class="board_search">
+                <div class="select_wrap">
+                  <select>
+                    <option value="tit">제목</option>
+                    <option value="txt">내용</option>
+                    <option value="tit+txt">제목+내용</option>
+                  </select>
+                </div>
+                <div class="search_wrap">
+                  <input type="search" placeholder="검색어를 입력해주세요">
+                  <button class="search_btn">
+                    <span class="blind">검색</span>
+                  </button>
+                </div>
+              </div>
+            </field>
+          </form>
+        </div>
+      </div>
     </main>
     <footer id="footer">
       <div class="inner">
