--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/13_유투바이오(jQuery 마이그레이션, 로그인 페이지, 보도자료)/login.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/13_유투바이오(jQuery 마이그레이션, 로그인 페이지, 보도자료)/login.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="/pub/images/og_image.jpg">
   <meta property="og:url" content="https://u2bio.com/front/main.do">
-  <title> U2Bio | 로그인</title>
+  <title>로그인 | U2Bio</title>
   <!-- 파비콘 -->
   <link rel="icon" href="images/favicon/favicon.ico">
   <link rel="apple-touch-icon-precomposed" href="images/favicon/favicon.ico">
